[gd_scene load_steps=17 format=2]

[ext_resource path="res://img/background.png" type="Texture" id=1]
[ext_resource path="res://button.tres" type="StyleBox" id=2]
[ext_resource path="res://font/ofont.ru_Maki Sans.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://img/timer/t5.png" type="Texture" id=4]
[ext_resource path="res://button_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://button_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://03_Wait.gd" type="Script" id=7]
[ext_resource path="res://img/timer/t4.png" type="Texture" id=8]
[ext_resource path="res://img/timer/t3.png" type="Texture" id=9]
[ext_resource path="res://img/timer/t2.png" type="Texture" id=10]
[ext_resource path="res://img/timer/t1.png" type="Texture" id=11]
[ext_resource path="res://audio/click.wav" type="AudioStream" id=12]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.721569, 0.403922, 0.839216, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.882353, 0.588235, 0.988235, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
expand_margin_left = 40.0
expand_margin_right = 40.0
expand_margin_top = 30.0
expand_margin_bottom = 30.0
shadow_color = Color( 0.47451, 0.298039, 0.537255, 1 )
shadow_size = 1
shadow_offset = Vector2( 0, 6 )

[sub_resource type="DynamicFont" id=2]
size = 38
extra_spacing_top = 3
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 4 ) ],
"loop": true,
"name": "timer",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 50
outline_color = Color( 0.392157, 0.482353, 0.0117647, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.840912
margin_bottom = 0.840942
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 80
custom_constants/margin_top = 50
custom_constants/margin_left = 80
custom_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 80.0
margin_top = 50.0
margin_right = 1200.0
margin_bottom = 640.0

[node name="Заглушка" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1120.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 1120.0
margin_bottom = 116.0
grow_vertical = 2
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Для большей точности нужно подождать 
113 секунд и продолжить тест"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Заглушка2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 1120.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 380 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="MarginContainer/VBoxContainer"]
position = Vector2( 559, 326 )
scale = Vector2( 1.90741, 1.89568 )
frames = SubResource( 3 )
animation = "timer"
frame = 1
playing = true

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 349.0
margin_top = 504.0
margin_right = 770.0
margin_bottom = 589.0
size_flags_horizontal = 6
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.988235, 0.956863, 1, 1 )
custom_colors/font_color_hover = Color( 0.988235, 0.956863, 1, 1 )
custom_colors/font_color_pressed = Color( 0.988235, 0.956863, 1, 1 )
text = "Продолжить"

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
[connection signal="button_down" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
